--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "soci-start",
+  "name": "social-media",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.2.1",
+    "@prisma/client": "^5.16.1",
     "babel-plugin-react-compiler": "^0.0.0-experimental-938cd9a-20240601",
     "next": "15.0.0-rc.0",
+    "prisma": "^5.16.1",
     "react": "19.0.0-rc-f994737d14-20240522",
     "react-dom": "19.0.0-rc-f994737d14-20240522"
   },
